RESOLVED #3 - Welcome text on login page not centered

--- a/src/sass/rural/_main.scss
+++ b/src/sass/rural/_main.scss
@@ -48,6 +48,10 @@
 			margin-left: 0;
 			margin-right: 0;
 		}
+
+		& > p {
+			text-align: center;
+		}
 	}
 	
 	.wt-page-title, .wt-main-container > h2 {
